--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -96,7 +96,7 @@
     position: absolute;
     right: 5px;
     bottom: 5px;
-    float: right;
+    /*float: right;*/
     width: 23px;
     height: 23px;
     color: $text-light;
